# last_kick

./: .gitignore  README.md  analysis.py  analysis_polars.py  last_kick_data.xlsx  requirements.txt
rs_version/: Cargo.toml  match_events.csv  matches.csv
rs_version/src/: main.rs
