[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0-pre.2"
polars = { version = "0.35.4", features = ["lazy", "describe", "ndarray", "object", "dtype-struct", "concat_str"] }
polars-io = "0.35.4"
